Warnings introspecting array of boxed type as signal argument.
When the signal at https://gitlab.gnome.org/GNOME/gnome-books/-/blob/b79968daf19/src/changeMonitor.js#L58 is emitted (gnome-books/documents from wip/carlosg/tracker3 branch). I see the following warnings being printed:
(org.gnome.Books:706137): Gjs-WARNING **: 15:19:21.776: JS ERROR: Error: Unable to introspect element-type of container in GValue
main@resource:///org/gnome/Books/js/main.js:44:24
run@resource:///org/gnome/gjs/modules/script/package.js:222:19
@/home/carlos/Build/gnome/bin/gnome-books:6:17
And the JS callback code not being executed. The only peculiarity with this signal is that one of its arguments is a GPtrArray containing elements of a boxed type (TrackerNotifierEvent). The introspection annotations seem correct and it seems to work on other g-i driven languages, so this is perhaps a GJS issue.