value: Introspect element-type in arrays

Expose a helper function to convert array types from a
GValue in place of a GIArgument, and use it when converting
types for signal handlers.

This should handle all byte/ptr/regular arrays, and all
possible element-types contained inside.

Fixes: https://gitlab.gnome.org/GNOME/gjs/-/issues/377